fix: load full exec command artifacts in web ui
